Création des API + màj graphique

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="Description" content="twISSter est l'application qui permet de recrééer des tweets des l'ISS, comme l'astronaute français Tomas Pesquet">
 	<link rel="shortcut icon" href="img/favicon.ico">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" /> -->
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
 	<link rel="stylesheet" href="style.css">
 
@@ -56,7 +56,7 @@
 		<div>
 			<h2>Carte</h2>
 			<div id="tile_option" class="option input_option">
-				<input type='radio' name='tile' value="mapbox.streets" id='tile1' checked="checked"><label for='tile1'>Street Map</label>
+				<input type='radio' name='tile' value="mapbox.streets" id='tile1' checked="checked"><label for='tile1'>Plan</label>
 				<input type='radio' name='tile' value="mapbox.satellite" id='tile2'><label for='tile2'>Satellite</label>
 				<input type='radio' name='tile' value="mapbox.mapbox-terrain-v2" id='tile3'><label for='tile3'>Terrain</label>
 			</div>
